--- a/addons/cms/view/default/common/leftbutton.html
+++ b/addons/cms/view/default/common/leftbutton.html
@@ -1,11 +1,10 @@
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <div class="btn-group-vertical">
-                <button type="button" class="btn btn-default">按钮 1</button>
-                <button type="button" class="btn btn-default">按钮 2</button>
-                <button type="button" class="btn btn-default">按钮 2</button>
-                <button type="button" class="btn btn-default">按钮 2</button>
+    <div class="overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
+        <div class="p-3">
+            <div class="flex flex-col gap-2">
+                <button type="button" class="inline-flex w-full items-center justify-center rounded-md border border-gray-200 bg-white px-3 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">按钮 1</button>
+                <button type="button" class="inline-flex w-full items-center justify-center rounded-md border border-gray-200 bg-white px-3 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">按钮 2</button>
+                <button type="button" class="inline-flex w-full items-center justify-center rounded-md border border-gray-200 bg-white px-3 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">按钮 2</button>
+                <button type="button" class="inline-flex w-full items-center justify-center rounded-md border border-gray-200 bg-white px-3 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">按钮 2</button>
             </div>
         </div>
     </div>
-    
