--- a/public/assets/addons/cms/css/common.css
+++ b/public/assets/addons/cms/css/common.css
@@ -2646,6 +2646,14 @@ footer,
   }
 }
 @media (max-width: 767px) {
+  body.is-open {
+    overflow: hidden;
+  }
+  .navbar .navbar-toggle.sidebar-toggle {
+    position: relative;
+    z-index: 10001;
+    pointer-events: auto;
+  }
   .navbar .form-search input[type=search] {
     position: relative;
     width: 100%;
@@ -2686,14 +2694,14 @@ footer,
   }
   .navbar .navbar-collapse.active {
     display: block;
-    margin-left: -15px;
+    margin-left: 0;
   }
   .navbar .navbar-collapse-bg {
     position: fixed;
     top: 0;
     overflow: hidden;
     z-index: 9998;
-    background: transparent;
+    background: rgba(0, 0, 0, 0.5);
     height: 100vh;
     width: 100%;
     display: block;
