--- a/addons/cms/view/default/analyse.html
+++ b/addons/cms/view/default/analyse.html
@@ -1,25 +1,23 @@
 {layout name="common/layout" /}
 
-<div class="container" id="content-container">
-    <div class="row">
-        <main class="col-xs-12 col-md-12">
-            <div class="panel panel-default article-content">
-                <div class="panel-body">
+<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8" id="content-container">
+    <div class="mt-6">
+        <main>
+            <section class="rounded-lg border border-gray-200 bg-white shadow-sm">
+                <div class="p-4 sm:p-6">
                     <div class="article-metas">
-                        <h2>{$analyse_info['mark']}</h2>
+                        <h2 class="text-xl font-semibold tracking-tight text-gray-900 sm:text-2xl">{$analyse_info['mark']}</h2>
                     </div>
 
-                    <div class="article-text">
+                    <div class="article-text mt-4">
                         <!-- S 正文 -->
-                        <p>
+                        <div class="prose max-w-none prose-p:leading-7 prose-headings:scroll-mt-24">
                             {$analyse_info['content']}
-                        </p>
+                        </div>
                         <!-- E 正文 -->
                     </div>
-                    <div class="clearfix"></div>
                 </div>
-            </div>
-
+            </section>
         </main>
     </div>
 </div>
