--- a/addons/cms/view/default/channel.html
+++ b/addons/cms/view/default/channel.html
@@ -1,112 +1,92 @@
 {layout name="common/layout" /}
 
-<div class="container" id="content-container">
-    <h1 class="category-title">
-        {:__($__CHANNEL__.name)}
-        <div class="more pull-right">
-            <ol class="breadcrumb">
+<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8" id="content-container">
+    <div class="mt-6 flex flex-wrap items-end justify-between gap-3">
+        <h1 class="text-xl font-semibold tracking-tight text-gray-900 sm:text-2xl">{:__($__CHANNEL__.name)}</h1>
+        <nav aria-label="Breadcrumb">
+            <ol class="flex flex-wrap items-center gap-x-2 gap-y-1 text-sm text-gray-600">
                 <!-- S 面包屑导航 -->
                 {cms:breadcrumb id="item"}
-                <li><a href="{$item.url}">{$item.name|htmlentities}</a></li>
+                <li><a href="{$item.url}" class="hover:text-gray-900">{$item.name|htmlentities}</a></li>
                 {/cms:breadcrumb}
                 <!-- E 面包屑导航 -->
             </ol>
-        </div>
-    </h1>
+        </nav>
+    </div>
 
-    <div class="row">
-        <div class="col-xs-12 col-md-7">
-            <div id="news-focus" class="carousel slide carousel-focus" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    {cms:blocklist id="block" name="newsfocus" row="2"}
-                    <li data-target="#carousel-focus-captions" data-slide-to="{:$i-1}" class="{if $i==1}active{/if}"></li>
-                    {/cms:blocklist}
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    {cms:blocklist id="block" name="newsfocus" row="2"}
-                    <div class="item {if $i==1}active{/if}">
-                        <a href="{$block.url}">
-                            <div class="carousel-img" style="background-image:url('{$block.image}');"></div>
-                            <div class="carousel-caption">
-                                <h3>{$block.title|htmlentities}</h3>
-                            </div>
-                        </a>
-                    </div>
-                    {/cms:blocklist}
+    <section class="mt-6 grid gap-6 lg:grid-cols-12">
+        <div class="space-y-4 lg:col-span-7">
+            {cms:blocklist id="block" name="newsfocus" row="2"}
+            <a href="{$block.url}" class="group block overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
+                <div class="aspect-[16/9] overflow-hidden bg-gray-100">
+                    <img src="{$block.image}" alt="{$block.title|htmlentities}" class="h-full w-full object-cover transition duration-300 group-hover:scale-105">
                 </div>
-                <a class="left carousel-control" href="#news-focus" role="button" data-slide="prev">
-                    <span class="icon-prev fa fa-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#news-focus" role="button" data-slide="next">
-                    <span class="icon-next fa fa-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+                <div class="p-4">
+                    <h3 class="line-clamp-2 text-sm font-semibold text-gray-900 sm:text-base">{$block.title|htmlentities}</h3>
+                </div>
+            </a>
+            {/cms:blocklist}
         </div>
-        <div class="col-xs-12 col-md-5 focus-img">
-            <div class="row">
+
+        <div class="lg:col-span-5">
+            <div class="grid grid-cols-2 gap-4">
                 {cms:blocklist id="item" name="newsfocus" limit="2,4"}
-                <div class="col-xs-6">
-                    <a href="{$item.url}">
-                        <span class="embed-responsive embed-responsive-16by9 img-zoom">
-                            <img src="{$item.image}" class="embed-responsive-item" alt="">
-                            <div class="intro">{$item.title|htmlentities}</div>
-                        </span>
-                    </a>
-                </div>
+                <a href="{$item.url}" class="group relative block overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
+                    <div class="aspect-[16/9] overflow-hidden bg-gray-100">
+                        <img src="{$item.image}" alt="{$item.title|htmlentities}" class="h-full w-full object-cover transition duration-300 group-hover:scale-105">
+                    </div>
+                    <div class="absolute inset-x-0 bottom-0 bg-gradient-to-t from-black/70 to-transparent px-2 py-2">
+                        <div class="line-clamp-2 text-xs font-medium text-white">{$item.title|htmlentities}</div>
+                    </div>
+                </a>
                 {/cms:blocklist}
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="row mt-2">
-        <main class="col-xs-12">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div class="channel-list">
-                        <div class="row">
-                            <!-- S 栏目列表 -->
-                            {cms:channellist id="channel" type="son" typeid="$__CHANNEL__.id" paginate="10"}
-                            <div class="col-xs-12 col-sm-6">
-                                <h3>{:__($channel.textlink)} <em><a href="{$channel.url}">{:__('More')}</a></em></h3>
-                                {cms:arclist id="row" channel="$channel.id" limit="0,1"}
-                                <div class="media">
-                                    <div class="media-left">
-                                        <a href="{$row.url}">
-                                            <div class="embed-responsive embed-responsive-square img-zoom">
-                                                <img class="embed-responsive-item media-object" width="64" height="64" src="{$row.image}">
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="media-body">
-                                        <h4 class="media-heading">{$row.textlink}</h4>
-                                        <p>{$row.description|mb_substr=0,40}</p>
-                                    </div>
-                                </div>
-                                {/cms:arclist}
-
-                                <ul class="list-unstyled inner-list">
-                                    {cms:arclist id="row" channel="$channel.id" limit="1,5"}
-                                    <li>
-                                        {$row.textlink}
-                                        <span class="pull-right">{$row.publishtime|date='m-d',###}</span>
-                                    </li>
-                                    {/cms:arclist}
-                                </ul>
-                            </div>
-                            {/cms:channellist}
-                            <!-- E 栏目列表 -->
+    <section class="mt-6">
+        <div class="overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
+            <div class="p-4 sm:p-6">
+                <div class="grid gap-6 sm:grid-cols-2">
+                    <!-- S 栏目列表 -->
+                    {cms:channellist id="channel" type="son" typeid="$__CHANNEL__.id" paginate="10"}
+                    <div class="min-w-0">
+                        <div class="flex items-center justify-between gap-3">
+                            <h3 class="text-base font-semibold text-gray-900">{:__($channel.textlink)}</h3>
+                            <a href="{$channel.url}" class="text-sm font-medium text-emerald-600 hover:text-emerald-700">{:__('More')}</a>
                         </div>
-                    </div>
 
-                    <!-- S 分页 -->
-                    <div class="text-center pager">
-                        {cms:pageinfo type="full" /}
+                        {cms:arclist id="row" channel="$channel.id" limit="0,1"}
+                        <div class="mt-3 rounded-lg border border-gray-200 bg-gray-50 p-3">
+                            <div class="flex gap-3">
+                                <a href="{$row.url}" class="block h-16 w-16 shrink-0 overflow-hidden rounded-md bg-gray-100">
+                                    <img src="{$row.image}" alt="" class="h-full w-full object-cover">
+                                </a>
+                                <div class="min-w-0">
+                                    <div class="text-sm font-semibold text-gray-900">{$row.textlink}</div>
+                                    <div class="mt-1 text-xs leading-5 text-gray-600">{$row.description|mb_substr=0,40}</div>
+                                </div>
+                            </div>
+                        </div>
+                        {/cms:arclist}
+
+                        <ul class="mt-3 space-y-2 text-sm text-gray-700">
+                            {cms:arclist id="row" channel="$channel.id" limit="1,5"}
+                            <li class="flex items-center justify-between gap-3">
+                                <div class="min-w-0 truncate">{$row.textlink}</div>
+                                <span class="shrink-0 text-xs text-gray-500">{$row.publishtime|date='m-d',###}</span>
+                            </li>
+                            {/cms:arclist}
+                        </ul>
                     </div>
-                    <!-- E 分页 -->
+                    {/cms:channellist}
+                    <!-- E 栏目列表 -->
+                </div>
+
+                <div class="mt-6 flex justify-center">
+                    {cms:pageinfo type="full" /}
                 </div>
             </div>
-        </main>
-    </div>
+        </div>
+    </section>
 </div>
