--- a/addons/cms/view/default/common/comment.html
+++ b/addons/cms/view/default/common/comment.html
@@ -1,62 +1,69 @@
 <div id="comment-container">
-    <!-- S 评论列表 -->
-    <div id="commentlist">
-        {assign name="aid" value="$[aid]" /}
-        {cms:commentlist id="comment" type="[type]" aid="$aid" pagesize="10"}
-        <dl id="comment-{$comment.id}">
-            <dt><a href="{$comment.user.url}" target="_blank"><img src='{$comment.user.avatar|cdnurl|htmlentities}'/></a></dt>
-            <dd>
-                <div class="parent">
-                    <cite><a href='{$comment.user.url}' target="_blank">{$comment.user.nickname|htmlentities}</a></cite>
-                    <small> {$comment.createtime|human_date} <a href="javascript:;" data-id="{$comment.id}" title="@{$comment.user.nickname|htmlentities} " class="reply">{:__('回复TA')}</a></small>
-                    <p>{$comment.content|htmlentities}</p>
-                </div>
-            </dd>
-            <div class="clearfix"></div>
-        </dl>
-        {/cms:commentlist}
-        {if $__COMMENTLIST__->isEmpty()}
-        <div class="loadmore loadmore-nodata"><span class="loadmore-tips">{:__('暂无评论')}</span></div>
-        {/if}
-    </div>
+     <!-- S 评论列表 -->
+     <div id="commentlist">
+         {assign name="aid" value="$[aid]" /}
+         {cms:commentlist id="comment" type="[type]" aid="$aid" pagesize="10"}
+         <dl id="comment-{$comment.id}" class="flex gap-4 border-b border-gray-100 py-4 last:border-b-0">
+             <dt class="shrink-0">
+                 <a href="{$comment.user.url}" target="_blank">
+                     <img src='{$comment.user.avatar|cdnurl|htmlentities}' class="h-10 w-10 rounded-full object-cover"/>
+                 </a>
+             </dt>
+             <dd class="min-w-0 flex-1">
+                 <div>
+                     <div class="flex flex-wrap items-center gap-x-2 gap-y-1">
+                         <cite class="not-italic font-semibold text-gray-900"><a href='{$comment.user.url}' target="_blank" class="hover:text-gray-900">{$comment.user.nickname|htmlentities}</a></cite>
+                         <small class="text-sm text-gray-500">{$comment.createtime|human_date}
+                             <a href="javascript:;" data-id="{$comment.id}" title="@{$comment.user.nickname|htmlentities} " class="reply ml-2 font-medium text-emerald-600 hover:text-emerald-700">{:__('回复TA')}</a>
+                         </small>
+                     </div>
+                     <p class="mt-2 text-sm leading-6 text-gray-700">{$comment.content|htmlentities}</p>
+                 </div>
+             </dd>
+             <div class="clearfix"></div>
+         </dl>
+         {/cms:commentlist}
+         {if $__COMMENTLIST__->isEmpty()}
+         <div class="loadmore loadmore-nodata"><span class="loadmore-tips">{:__('暂无评论')}</span></div>
+         {/if}
+     </div>
     <!-- E 评论列表 -->
 
-    <!-- S 评论分页 -->
-    <div id="commentpager" class="text-center">
-        {cms:commentinfo type="full" /}
-    </div>
-    <!-- E 评论分页 -->
+     <!-- S 评论分页 -->
+     <div id="commentpager" class="mt-4 flex justify-center">
+         {cms:commentinfo type="full" /}
+     </div>
+     <!-- E 评论分页 -->
 
-    <!-- S 发表评论 -->
-    <div id="postcomment">
-        <h3>{:__('发表评论')} <a href="javascript:;">
-            <small>{:__('取消回复')}</small>
-        </a></h3>
-        <form action="{:addon_url('cms/comment/post')}" method="post" id="postform">
-            {:token()}
-            <input type="hidden" name="type" value="[type]"/>
-            <input type="hidden" name="aid" value="{$[aid]}"/>
-            <input type="hidden" name="pid" id="pid" value="0"/>
-            <div class="form-group">
-                <textarea name="content" class="form-control" {if !$user}disabled placeholder="{:__('请登录后再发表评论')}" {/if} id="commentcontent" cols="6" rows="5"></textarea>
-            </div>
-            {if !$user}
-            <div class="form-group">
-                <a href="{:url('index/user/login')}" class="btn btn-primary">{:__('登录')}</a>
-                <a href="{:url('index/user/register')}" class="btn btn-outline-primary">{:__('注册新账号')}</a>
-            </div>
-            {else /}
-            <div class="form-group">
-                <input name="submit" type="submit" id="submit" value="{:__('提交评论(Ctrl+回车)')}" class="btn btn-success"/>
-                <span id="actiontips"></span>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input name="subscribe" type="checkbox" class="checkbox" checked value="1"/> {:__('有人回复时邮件通知我')}
-                </label>
-            </div>
-            {/if}
-        </form>
-    </div>
-    <!-- E 发表评论 -->
-</div>
+     <!-- S 发表评论 -->
+     <div id="postcomment">
+         <h3 class="text-base font-semibold text-gray-900">{:__('发表评论')} <a href="javascript:;" class="js-cancel-reply ml-2 hidden text-sm font-normal text-gray-500 hover:text-gray-700">
+             <small>{:__('取消回复')}</small>
+         </a></h3>
+         <form action="{:addon_url('cms/comment/post')}" method="post" id="postform">
+             {:token()}
+             <input type="hidden" name="type" value="[type]"/>
+             <input type="hidden" name="aid" value="{$[aid]}"/>
+             <input type="hidden" name="pid" id="pid" value="0"/>
+             <div class="mt-4">
+                 <textarea name="content" class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm leading-6 text-gray-900 shadow-sm focus:border-emerald-500 focus:outline-none focus:ring-2 focus:ring-emerald-500/20" {if !$user}disabled placeholder="{:__('请登录后再发表评论')}" {/if} id="commentcontent" cols="6" rows="5"></textarea>
+             </div>
+             {if !$user}
+             <div class="mt-4 flex flex-wrap gap-2">
+                 <a href="{:url('index/user/login')}" class="inline-flex items-center rounded-md bg-emerald-600 px-4 py-2 text-sm font-semibold text-white hover:bg-emerald-700">{:__('登录')}</a>
+                 <a href="{:url('index/user/register')}" class="inline-flex items-center rounded-md border border-emerald-600 px-4 py-2 text-sm font-semibold text-emerald-700 hover:bg-emerald-50">{:__('注册新账号')}</a>
+             </div>
+             {else /}
+             <div class="mt-4 flex flex-wrap items-center gap-3">
+                 <input name="submit" type="submit" id="submit" value="{:__('提交评论(Ctrl+回车)')}" class="inline-flex items-center rounded-md bg-emerald-600 px-4 py-2 text-sm font-semibold text-white hover:bg-emerald-700"/>
+                 <span id="actiontips" class="text-sm"></span>
+             </div>
+             <div class="mt-3 flex items-center gap-2 text-sm text-gray-600">
+                 <input name="subscribe" type="checkbox" checked value="1" class="h-4 w-4 rounded border-gray-300 text-emerald-600 focus:ring-emerald-500"/>
+                 <span>{:__('有人回复时邮件通知我')}</span>
+             </div>
+             {/if}
+         </form>
+     </div>
+     <!-- E 发表评论 -->
+ </div>
