--- a/addons/cms/view/default/common/index_list.html
+++ b/addons/cms/view/default/common/index_list.html
@@ -10,6 +10,6 @@
     <div class="loadmore loadmore-line loadmore-nodata"><span class="loadmore-tips">暂无更多数据</span></div>
 {else /}
     <div class="text-center">
-        <a href="?page={:$page+1}" data-page="{$page}" class="btn btn-default my-4 px-4 btn-loadmore" data-autoload="false">加载更多</a>
+        <a href="?page={:$page+1}" data-page="{$page}" class="btn-loadmore my-4 inline-flex items-center justify-center rounded-md border border-gray-200 bg-white px-4 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-50 hover:text-emerald-600" data-autoload="false">加载更多</a>
     </div>
 {/if}
