--- a/addons/cms/view/default/common/item.html
+++ b/addons/cms/view/default/common/item.html
@@ -1,52 +1,39 @@
-<article class="article-item col-sm-6 col-xs-12 col-md-6">
+<article class="py-4">
     {if $item.images && count($item.images_list)>1}
-    <div class="gallery-article">
-        <h3 class="article-title">
-            <a href="{$item.url}" {if $item.style}style="{$item.style_text}"{/if}>{:$item->highlight(htmlentities($item->title), $__SEARCHTERM__??'')}</a>
+    <div class="space-y-3">
+        <h3 class="text-base font-semibold text-gray-900">
+            <a href="{$item.url}" class="hover:text-emerald-600" {if $item.style}style="{$item.style_text}"{/if}>{:$item->highlight(htmlentities($item->title), $__SEARCHTERM__??'')}</a>
         </h3>
-        <div class="row">
+
+        <div class="grid grid-cols-2 gap-2 sm:grid-cols-4">
             {volist name="item.images_list" id="img" length="4"}
-            <div class="col-sm-3 col-xs-6">
-                <a href="{$item.url}" class="img-zoom">
-                    <div class="embed-responsive embed-responsive-4by3">
-                        <img src="{$img}" alt="{$item.title|htmlentities}" class="embed-responsive-item">
-                    </div>
-                </a>
-            </div>
+            <a href="{$item.url}" class="group block aspect-[4/3] overflow-hidden rounded-md bg-gray-100">
+                <img src="{$img}" alt="{$item.title|htmlentities}" loading="lazy" class="h-full w-full object-cover transition duration-300 group-hover:scale-105">
+            </a>
             {/volist}
         </div>
-        <div class="media">
-            <div class="media-body ml-0">
-                <div class="article-intro">
-                    {$item.description|htmlentities}
-                </div>
-               
-            </div>
-        </div>
+
+        <div class="text-sm leading-7 text-gray-600">{$item.description|htmlentities}</div>
     </div>
     {else/}
-    <div class="media">
-        <div class="">
-            <a href="{$item.url}">
-                <div class="embed-responsive embed-responsive-4by3 img-zoom">
-                    <img src="{$item.image}" alt="{$item.title|htmlentities}">
-                </div>
-            </a>
-        </div>
-        <div class="media-body">
-            <h3 class="article-title" style="margin-top: 12px;">
-                <a href="{$item.url}" {if $item.style}style="{$item.style_text}"{/if}>{:$item->highlight($item->title, $__SEARCHTERM__??'')}</a>
+    <div class="flex gap-4">
+        <a href="{$item.url}" class="group block w-28 shrink-0 aspect-[4/3] overflow-hidden rounded-md bg-gray-100">
+            <img src="{$item.image ?: '/assets/addons/cms/img/default.png'}" alt="{$item.title|htmlentities}" loading="lazy" class="h-full w-full object-cover transition duration-300 group-hover:scale-105">
+        </a>
+
+        <div class="min-w-0 flex-1 space-y-2">
+            <h3 class="text-base font-semibold leading-6 text-gray-900">
+                <a href="{$item.url}" class="hover:text-emerald-600" {if $item.style}style="{$item.style_text}"{/if}>{:$item->highlight($item->title, $__SEARCHTERM__??'')}</a>
             </h3>
-            <div class="article-intro">
-                {$item.description|htmlentities}
+            <div class="text-sm leading-7 text-gray-600">{$item.description|htmlentities}</div>
+
+            <div class="flex flex-wrap items-center gap-x-4 gap-y-2 text-xs text-gray-500">
+                <a href="{$item.channel.url}" class="inline-flex items-center rounded-full bg-emerald-50 px-2 py-0.5 font-medium text-emerald-700">{$item.channel.name|htmlentities}</a>
+                <span itemprop="date">{:date("Y年m月d日", $item['publishtime'])}</span>
+                <span class="hidden sm:inline" itemprop="likes" title="点赞次数"><i class="fa fa-thumbs-up mr-1" aria-hidden="true"></i>{$item.likes}</span>
+                <!-- <span class="hidden-xs" itemprop="comments"><a href="{$item.url}#comments" target="_blank" title="评论数"><i class="fa fa-comments"></i> {$item.comments}</a> 评论</span> -->
+                <span class="hidden sm:inline" itemprop="views" title="浏览次数"><i class="fa fa-eye mr-1" aria-hidden="true"></i>{$item.views}</span>
             </div>
-        </div>
-        <div class="article-tag" style="margin-top: 8px;">
-            <a href="{$item.channel.url}" class="tag tag-primary">{$item.channel.name|htmlentities}</a>
-            <span itemprop="date">{:date("Y年m月d日", $item['publishtime'])}</span>
-            <span class="hidden-xs" itemprop="likes" title="点赞次数"><i class="fa fa-thumbs-up"></i> {$item.likes} </span>
-            <!-- <span class="hidden-xs" itemprop="comments"><a href="{$item.url}#comments" target="_blank" title="评论数"><i class="fa fa-comments"></i> {$item.comments}</a> 评论</span> -->
-            <span class="hidden-xs" itemprop="views" title="浏览次数"><i class="fa fa-eye"></i> {$item.views} </span>
         </div>
     </div>
     {/if}
