--- a/addons/cms/view/default/common/item_download.html
+++ b/addons/cms/view/default/common/item_download.html
@@ -1,26 +1,18 @@
-<div class="col-xs-12 col-md-6">
-    <div class="article-item no-border">
-        <div class="media">
-            <div class="media-left">
-                <a href="{$item.url}">
-                    <div class="embed-responsive embed-responsive-square img-zoom">
-                        <img src="{$item.image}">
-                    </div>
-                </a>
-            </div>
-            <div class="media-body">
-                <h3 class="article-title">
-                    <a href="{$item.url}" {if $item.style}style="{$item.style_text}"{/if}>{$item.title|htmlentities}</a>
-                </h3>
-                <div class="article-intro">
-                    {$item.description|htmlentities}
-                </div>
-                <div class="article-tag">
-                    <a href="{$item.channel.url}" class="tag tag-primary">{$item.channel.name|htmlentities}</a>
-                    <span itemprop="date" class="hidden-sm">{:date("Y年m月d日", $item['publishtime'])}</span>
-                </div>
+<article class="rounded-lg border border-gray-200 bg-white p-4 shadow-sm">
+    <div class="flex gap-4">
+        <a href="{$item.url}" class="group block h-24 w-24 shrink-0 overflow-hidden rounded-lg bg-gray-100">
+            <img src="{$item.image}" alt="{$item.title|htmlentities}" loading="lazy" class="h-full w-full object-cover transition duration-300 group-hover:scale-105">
+        </a>
+
+        <div class="min-w-0 flex-1">
+            <h3 class="text-base font-semibold leading-6 text-gray-900">
+                <a href="{$item.url}" class="hover:text-emerald-600" {if $item.style}data-css="{$item.style_text}"{/if}>{$item.title|htmlentities}</a>
+            </h3>
+            <div class="mt-2 text-sm leading-7 text-gray-600">{$item.description|htmlentities}</div>
+            <div class="mt-3 flex flex-wrap items-center gap-x-4 gap-y-2 text-xs text-gray-500">
+                <a href="{$item.channel.url}" class="inline-flex items-center rounded-full bg-emerald-50 px-2 py-0.5 font-medium text-emerald-700">{$item.channel.name|htmlentities}</a>
+                <span itemprop="date">{:date("Y年m月d日", $item['publishtime'])}</span>
             </div>
         </div>
-
     </div>
-</div>
+</article>
