--- a/addons/cms/view/default/common/item_mbti.html
+++ b/addons/cms/view/default/common/item_mbti.html
@@ -1,18 +1,17 @@
-<div class="card">
-    <div class="thumb">
-        <a href="{$item.url}" class="preview-link">
-            <div class="embed-responsive embed-responsive-4by3">
-                <img src="{$item.image}" alt="">
-            </div>
-        </a>
-        <a href="{$item.url}" class="quickview-link"><i class="fa fa-search"></i></a>
-    </div>
-    <a class="title" href="{$item.url}" {if $item.style}style="{$item.style_text}" {/if}></a>
-    <h2>{$item.title|htmlentities}</h2>
-    <div class="sub_title" style="padding: 0 6px 12px 6px;color: #666;font-size: 13px;">
-        <!-- 揭示个人性格特点和行为模式 -->
-        {$item.sub_title|htmlentities}
-    </div>
+<div class="group overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm transition hover:shadow-md">
+    <a href="{$item.url}" class="relative block aspect-[4/3] overflow-hidden bg-gray-100">
+        <img class="h-full w-full object-cover transition duration-300 group-hover:scale-105" src="{$item.image}" alt="{$item.title|htmlentities}">
+        <span class="absolute right-3 top-3 inline-flex h-9 w-9 items-center justify-center rounded-full bg-white/90 text-gray-700 shadow">
+            <i class="fa fa-search" aria-hidden="true"></i>
+        </span>
     </a>
+    <div class="p-3">
+        <a class="block text-sm font-semibold text-gray-900 hover:text-emerald-600" href="{$item.url}" {if $item.style}style="{$item.style_text}"{/if}>
+            {$item.title|htmlentities}
+        </a>
+        <div class="mt-2 text-xs leading-6 text-gray-600">
+            <!-- 揭示个人性格特点和行为模式 -->
+            {$item.sub_title|htmlentities}
+        </div>
+    </div>
 </div>
-
