--- a/addons/cms/view/default/common/leftbar.html
+++ b/addons/cms/view/default/common/leftbar.html
@@ -1,91 +1,14 @@
-
-<!-- <div class="panel-group" id="accordion">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" 
-                href="#collapseOne">
-                分类一
-                </a>
-            </h4>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
-            <div class="panel-body">
-                <div class="btn-group-vertical">
-                    <button type="button" class="btn btn-default">按钮 1</button>
-                    <button type="button" class="btn btn-default">按钮 2</button>
-                    <button type="button" class="btn btn-default">按钮 2</button>
-                    <button type="button" class="btn btn-default">按钮 2</button>
-                </div>
-            </div>
-        </div>
+<div class="overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
+    <div class="border-b border-gray-100 px-4 py-3">
+        <div class="text-base font-semibold text-gray-900">分类</div>
     </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" 
-                href="#collapseTwo">
-                分类二
-            </a>
-            </h4>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse">
-        <div class="panel-body">
-            <div class="btn-group-vertical">
-                <button type="button" class="btn btn-default">按钮 1</button>
-                <button type="button" class="btn btn-default">按钮 2</button>
-                <button type="button" class="btn btn-default">按钮 2</button>
-                <button type="button" class="btn btn-default">按钮 2</button>
-            </div>
-        </div>
-        </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" 
-                href="#collapseThree">
-                分类三  
-                </a>
-            </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse">
-            <div class="panel-body">
-                <div class="btn-group-vertical">
-                    <button type="button" class="btn btn-default">按钮 1</button>
-                    <button type="button" class="btn btn-default">按钮 2</button>
-                    <button type="button" class="btn btn-default">按钮 2</button>
-                    <button type="button" class="btn btn-default">按钮 2</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
-<div class="panel panel-default">
-    <div class="panel-heading h3 u-flex u-flex-between">
-        <div class="">分类</div>
-    </div>
-    <div class="panel-body">
-        <div class="col-xs-12 col-md-12 cateItem">
-            电视剧
-        </div>
-        <div class="col-xs-12 col-md-12 cateItem">
-            电影
-        </div>
-        <div class="col-xs-12 col-md-12 cateItem">
-            动画
-        </div>
-        <div class="col-xs-12 col-md-12 cateItem">
-            漫画
-        </div>
-        <div class="col-xs-12 col-md-12 cateItem">
-            小说
-        </div>
-        <div class="col-xs-12 col-md-12 cateItem">
-            名人
-        </div>
+    <div class="divide-y divide-gray-100">
+        <div class="px-4 py-3 text-sm text-gray-700 hover:bg-gray-50">电视剧</div>
+        <div class="px-4 py-3 text-sm text-gray-700 hover:bg-gray-50">电影</div>
+        <div class="px-4 py-3 text-sm text-gray-700 hover:bg-gray-50">动画</div>
+        <div class="px-4 py-3 text-sm text-gray-700 hover:bg-gray-50">漫画</div>
+        <div class="px-4 py-3 text-sm text-gray-700 hover:bg-gray-50">小说</div>
+        <div class="px-4 py-3 text-sm text-gray-700 hover:bg-gray-50">名人</div>
     </div>
 
 </div>
