--- a/addons/cms/view/default/common/payment.html
+++ b/addons/cms/view/default/common/payment.html
@@ -1,26 +1,26 @@
 <!-- S 付费阅读 -->
 {if !$__ARCHIVES__.ispaid}
-<div class="article-pay">
+<div class="space-y-4">
     {if $__CHANNEL__.vip>0 && (!$user || $user.vip<$__CHANNEL__.vip)}
-    <div class="alert alert-danger">
-        <strong>温馨提示!</strong> 升级 <b>VIP {$__CHANNEL__.vip}</b> 免费浏览，你当前
+    <div class="rounded-lg border border-red-200 bg-red-50 p-4 text-sm text-red-800">
+        <strong class="font-semibold">温馨提示!</strong> 升级 <b>VIP {$__CHANNEL__.vip}</b> 免费浏览，你当前
         {if $user}
             <b>VIP {$user.vip|default=0}</b>
         {else/}
             未登录
         {/if}
         <div class="mt-3">
-            <a href="{:url('index/vip/viplist')}" target="_blank" class="btn btn-warning">
-                <i class="fa fa-diamond"></i> 升级VIP {$__CHANNEL__.vip}
+            <a href="{:url('index/vip/viplist')}" target="_blank" class="inline-flex items-center rounded-md bg-amber-500 px-4 py-2 text-sm font-semibold text-white hover:bg-amber-600">
+                <i class="fa fa-diamond mr-2"></i> 升级VIP {$__CHANNEL__.vip}
             </a>
         </div>
     </div>
     {/if}
 
     {if $__ARCHIVES__.price>0}
-    <div class="alert alert-danger">
-        <strong>温馨提示!</strong> 你需要支付 <b>￥{cms:archives name='price' /}</b> 元后才能查看测试结果
-        <div class="mt-3">
+    <div class="rounded-lg border border-red-200 bg-red-50 p-4 text-sm text-red-800">
+        <strong class="font-semibold">温馨提示!</strong> 你需要支付 <b>￥{cms:archives name='price' /}</b> 元后才能查看测试结果
+        <div class="mt-3 flex flex-wrap gap-2">
             {include file="common/paytype" /}
         </div>
     </div>
