--- a/addons/cms/view/default/common/paytype.html
+++ b/addons/cms/view/default/common/paytype.html
@@ -1,11 +1,11 @@
 <!--@formatter:off-->
 {if stripos(config('cms.paytypelist'),'wechat')!==false}
-    <a href="{:addon_url('cms/order/submit', ['id'=>$__ARCHIVES__.id,'paytype'=>'wechat'])}" {if !$isWechat}target="_blank"{/if} class="btn btn-success btn-paynow"><i class="fa fa-wechat"></i> 微信支付</a>
+    <a href="{:addon_url('cms/order/submit', ['id'=>$__ARCHIVES__.id,'paytype'=>'wechat'])}" {if !$isWechat}target="_blank"{/if} data-paytype="wechat" data-price="{cms:archives name='price' /}" class="btn-paynow inline-flex items-center rounded-md bg-emerald-600 px-4 py-2 text-sm font-semibold text-white hover:bg-emerald-700"><i class="fa fa-wechat mr-2"></i> 微信支付</a>
 {/if}
 {if stripos(config('cms.paytypelist'),'alipay')!==false}
-    <a href="{:addon_url('cms/order/submit', ['id'=>$__ARCHIVES__.id,'paytype'=>'alipay'])}" {if !$isWechat}target="_blank"{/if} class="btn btn-primary btn-paynow"><i class="fa fa-money"></i> 支付宝支付</a>
+    <a href="{:addon_url('cms/order/submit', ['id'=>$__ARCHIVES__.id,'paytype'=>'alipay'])}" {if !$isWechat}target="_blank"{/if} data-paytype="alipay" data-price="{cms:archives name='price' /}" class="btn-paynow inline-flex items-center rounded-md bg-blue-600 px-4 py-2 text-sm font-semibold text-white hover:bg-blue-700"><i class="fa fa-money mr-2"></i> 支付宝支付</a>
 {/if}
 {if stripos(config('cms.paytypelist'),'balance')!==false}
-    <a href="{:addon_url('cms/order/submit', ['id'=>$__ARCHIVES__.id,'paytype'=>'balance'])}" class="btn btn-warning btn-balance" data-price="{cms:archives name='price' /}"><i class="fa fa-dollar"></i> 余额支付</a>
+    <a href="{:addon_url('cms/order/submit', ['id'=>$__ARCHIVES__.id,'paytype'=>'balance'])}" class="btn-balance inline-flex items-center rounded-md bg-amber-500 px-4 py-2 text-sm font-semibold text-white hover:bg-amber-600" data-paytype="balance" data-price="{cms:archives name='price' /}"><i class="fa fa-dollar mr-2"></i> 余额支付</a>
 {/if}
 <!--@formatter:on-->
