--- a/addons/cms/view/default/common/qa.html
+++ b/addons/cms/view/default/common/qa.html
@@ -1,7 +1,9 @@
-<div class="col-xs-12 col-md-12 animate__animated animate__fadeInUp" data-wow-delay=".3s">
-    <div class="panel panel-default">
-        <div class="h3 pt-3">Q&A</div>
-        <div class="panel-body">
+<div class="animate__animated animate__fadeInUp" data-wow-delay=".3s">
+    <div class="overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
+        <div class="border-b border-gray-100 px-4 py-3">
+            <div class="text-lg font-semibold text-gray-900">Q&A</div>
+        </div>
+        <div class="p-4">
             <el-collapse v-model="activeNames">
                 <el-collapse-item title="⬊什么是MBTI？" name="1">
                   <div>
