--- a/addons/cms/view/default/common/related.html
+++ b/addons/cms/view/default/common/related.html
@@ -1,16 +1,18 @@
 <div class="related-article">
-    <div class="row">
-        <!-- S 相关文章 -->
-        {cms:arclist id="relate" tags="__ARCHIVES__.tags" model="__ARCHIVES__.model_id" row="4"}
-        <div class="col-sm-3 col-xs-6">
-            <a href="{$relate.url}" class="img-zoom">
-                <div class="embed-responsive embed-responsive-4by3">
-                    <img src="{$relate.image}" alt="{$relate.title|htmlentities}" class="embed-responsive-item">
-                </div>
-            </a>
-            <h5 class="text-center"><a href="{$relate.url}">{$relate.title|htmlentities}</a></h5>
-        </div>
-        {/cms:arclist}
-        <!-- E 相关文章 -->
-    </div>
-</div>
+     <div class="grid gap-4 sm:grid-cols-2 lg:grid-cols-4">
+         <!-- S 相关文章 -->
+         {cms:arclist id="relate" tags="__ARCHIVES__.tags" model="__ARCHIVES__.model_id" row="4"}
+         <div class="min-w-0">
+             <a href="{$relate.url}" class="group block overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
+                 <div class="aspect-[4/3] overflow-hidden bg-gray-100">
+                     <img src="{$relate.image}" alt="{$relate.title|htmlentities}" class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105">
+                 </div>
+                 <div class="p-3">
+                     <h5 class="line-clamp-2 text-sm font-medium text-gray-900">{$relate.title|htmlentities}</h5>
+                 </div>
+             </a>
+         </div>
+         {/cms:arclist}
+         <!-- E 相关文章 -->
+     </div>
+ </div>
