--- a/addons/cms/view/default/common/sidebar.html
+++ b/addons/cms/view/default/common/sidebar.html
@@ -1,54 +1,14 @@
 
-<div class="panel panel-default panel-blockimg">
+<div class="overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
     {cms:block name="sidebarad1" /}
 </div>
 
 
-<div class="panel panel-default panel-blockimg">
+<div class="mt-6 overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
     {cms:block name="sidebarad2" /}
 </div>
 
-<div class="panel panel-default panel-blockimg">
+<div class="mt-6 overflow-hidden rounded-lg border border-gray-200 bg-white shadow-sm">
     {cms:block name="sidebarad3" /}
 </div>
-<!-- S 热门标签 -->
-<!-- <div class="panel panel-default hot-tags">
-    <div class="panel-heading">
-        <h3 class="panel-title">{:__('Hot tags')}</h3>
-    </div>
-    <div class="panel-body">
-        <div class="tags">
-            {cms:taglist id="tag" orderby="rand" limit="30"}
-            <a href="{$tag.url}" class="tag"> <span>{$tag.name|htmlentities}</span></a>
-            {/cms:taglist}
-        </div>
-    </div>
-</div> -->
-<!-- E 热门标签 --> 
-<!-- S 热门资讯 -->
-<!-- <div class="panel panel-default hot-article">
-    <div class="panel-heading">
-        <h3 class="panel-title">{:__('Recommend news')}</h3>
-    </div>
-    <div class="panel-body">
-        {cms:arclist id="item" model="1" row="10" flag="recommend" orderby="id" orderway="asc"}
-        <div class="media media-number">
-            <div class="media-left">
-                <span class="num tag">{$i}</span>
-            </div>
-            <div class="media-body">
-                <a class="link-dark" href="{$item.url}" title="{$item.title|htmlentities}">{$item.title|htmlentities}</a>
-            </div>
-        </div>
-        {/cms:arclist}
-    </div>
-</div> -->
-<!-- E 热门资讯 -->
-
-
-
-
-
-
-
 
