--- a/addons/cms/view/default/special.html
+++ b/addons/cms/view/default/special.html
@@ -1,153 +1,75 @@
 {layout name="common/layout" /}
-<style>
-     [v-cloak] {
-      display: none;
-    }
-    .special-headline {
-        margin-top: 15px;
-    }
-
-    .special-headline blockquote {
-        border-radius: 3px;
-        padding: 15px 17px;
-        border: none;
-        background: #f5f9ff;
-        font-family: 'Open Sans', sans-serif !important;
-    }
-
-    .special-headline blockquote:before {
-        content: ' ';
-    }
-
-    .special-headline blockquote h3 {
-        line-height: 35px !important;
-        margin-bottom: 0px;
-        margin-top: 0 !important;
-        font-size: 16px !important;
-        font-weight: 400;
-        color: #777;
-    }
-
-    .special-headline blockquote h3::before {
-        content: "“";
-        font-size: 100px;
-        display: block;
-        float: left;
-        line-height: 1;
-        height: 35px;
-        opacity: .4;
-        padding-right: 10px;
-    }
-
-    .special-banner {
-        background-image: url({cms:special name= 'banner' /});
-        background-size: cover;
-        background-attachment: scroll;
-        background-position: center;
-        height: 300px;
-        position: relative;
-    }
-
-    .special-title {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        padding-top: 10px;
-        background: linear-gradient(-180deg, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.50));
-    }
-
-    .special-title .label {
-        margin-left: 20px;
-    }
-
-    .special-title h1 {
-        font-size: 22px;
-        color: #fff;
-        line-height: 30px;
-        padding-left: 20px;
-        margin-bottom: 20px;
-    }
+ <div id="app" v-cloak class="hidden">
+ <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8" id="content-container">
  
-    @media (max-width: 767px) {
-        .special-banner {
-            height: 180px;
-        }
-        .special-headline blockquote h3 {
-            font-size: 14px !important;
-        }
-
-        .special-headline blockquote h3::before {
-            font-size: 80px;
-        }
-    }
-</style>
-<div id="app" v-cloak>
-<div class="container" id="content-container">
-
-    <div class="row">
-
-        <main class="col-xs-12">
-            <div class="panel panel-default article-content">
-                <div class="panel-body">
-                    <div class="special-banner">
-                        <div class="special-title">
-                            <div class="label label-primary">
-                                {cms:special name="label|default='热门专题'" /}
-                            </div>
-                            <h1>{cms:special name="title|htmlentities" /}</h1>
-                        </div>
-                    </div>
-
-                    <div class="special-headline">
-                        <blockquote>
-                            <h3>{cms:special name="intro" /}</h3>
-                        </blockquote>
-                    </div>
-                    <div class="mt-3" v-html="specialData.content"></div>
-                </div>
-                <div class="panel-body">
-                    <div class="special-body">
-                        <div class="article-list">  
-                            <!-- S 专题文章列表 -->
-                            {cms:pagelist id="item"}
-                            {include file="common/item_product"}
-                            {/cms:pagelist}
-                            <!-- E 专题文章列表 -->
-                        </div>
-
-                        <!-- S 分页 -->
-                        {include file="common/pageinfo" /}
-                        <!-- E 分页 -->
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-            </div>
-        </main>
-    </div>
-</div>
-</div>
+     <main class="mt-6">
+         <div class="rounded-lg border border-gray-200 bg-white shadow-sm">
+             <div class="relative overflow-hidden rounded-t-lg bg-gray-100">
+                 <img src="{cms:special name='banner' /}" alt="{cms:special name='title|htmlentities' /}" loading="lazy" class="h-48 w-full object-cover sm:h-64">
+                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/20 to-transparent"></div>
+                 <div class="absolute bottom-0 left-0 right-0 p-4">
+                     <div class="inline-flex items-center rounded-full bg-emerald-600 px-3 py-1 text-xs font-semibold text-white">
+                         {cms:special name="label|default='热门专题'" /}
+                     </div>
+                     <h1 class="mt-2 text-xl font-bold leading-7 text-white sm:text-2xl">{cms:special name="title|htmlentities" /}</h1>
+                 </div>
+             </div>
+ 
+             <div class="space-y-4 p-4">
+                 <section aria-label="{:__('专题简介')}">
+                     <blockquote class="rounded-md bg-emerald-50 p-4 text-sm leading-7 text-gray-700">
+                         {cms:special name="intro" /}
+                     </blockquote>
+                 </section>
+ 
+                 <section aria-label="{:__('专题内容')}">
+                     <div v-html="specialData.content"></div>
+                 </section>
+             </div>
+ 
+             <div class="border-t border-gray-100 p-4">
+                 <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-4">
+                     <!-- S 专题文章列表 -->
+                     {cms:pagelist id="item"}
+                     {include file="common/item_product"}
+                     {/cms:pagelist}
+                     <!-- E 专题文章列表 -->
+                 </div>
+ 
+                 <!-- S 分页 -->
+                 <div class="mt-8">
+                     {include file="common/pageinfo" /}
+                 </div>
+                 <!-- E 分页 -->
+             </div>
+         </div>
+     </main>
+ </div>
+ </div>
 <script type="text/javascript" src="__ADDON__/js/vue.js"></script>
 <script type="text/javascript" src="__ADDON__/js/vue-index.js"></script>
 
-<script>
-    new Vue({
-        el: '#app',
-        data: {
-            specialData:'',
-            sid:''
-        },
-        created() {
-            var searchString = window.location.search;
-            var params = new URLSearchParams(searchString);
-            this.sid = params.get('sid')
-            // this.getSpecialData()
-        },
-        methods: {
-            getSpecialData(){
-                const params = new URLSearchParams();
-                params.append('special_id', this.sid);
-                fetch('/api/personality/getSpecialInfo?' + params.toString())
+ <script>
+     new Vue({
+         el: '#app',
+         data: {
+             specialData:'',
+             sid:''
+         },
+         created() {
+             var searchString = window.location.search;
+             var params = new URLSearchParams(searchString);
+             this.sid = params.get('sid')
+             // this.getSpecialData()
+         },
+         mounted() {
+             this.$el.classList.remove('hidden');
+         },
+         methods: {
+             getSpecialData(){
+                 const params = new URLSearchParams();
+                 params.append('special_id', this.sid);
+                 fetch('/api/personality/getSpecialInfo?' + params.toString())
                     .then(response => response.json())
                     .then(data => {
                     this.specialData = data.msg.info;
